--- a/alarmconfig.json
+++ b/alarmconfig.json
@@ -65,6 +65,17 @@
                     [24, "hr", "MSG", "Message"]]
         }
     ],
-    "silentHours" :  [[[0,0],[5,22],[1,31],[1,12],[2,2]],
-                     [[0,0],[9,16],[1,31],[1,12],[2,7]]]
+"silentHours" :  [[[0,0],[5,22],[1,31],[1,12],[2,2]],
+                  [[0,0],[9,16],[1,31],[1,12],[2,7]]],
+
+"SongMaster" :  [[24,"hr", "SS", "Starting Song"],
+                 [24,"hr", "VO", "Voice"],
+                 [24,"hr", "HR", "Hour"],
+                 [12,"mo", "MO", "Month"],
+                 [31,"dt", "DT", "Date"],
+                 [7, "dw", "DW", "Day"],
+                 [100, "LP", "SN1", "Song1"],
+                 [100, "LP", "SN2", "Song2"],
+                 [1080, "LR", "SN3", "Song3"],
+                 [24, "hr", "MSG", "Message"]]
 }
